[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "climbing_cams"
authors = [{name = "Miguel Masó", email = "miguel.maso@upc.edu"}]
version = "0.0.1"
license = {text = "MIT License"}
readme = "README.md"
description = "Tools for plotting statistics of climbing cams"
keywords = ["climbing", "rock climbing", "climbing cams", "friends"]
requires-python = ">=3"
dependencies = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/miguelmaso/climbing_cams"
Repository = "https://github.com/miguelmaso/climbing_cams"

[tool.hatch.build]
include = ["/*.py","/*.csv",]
